--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7874,7 +7874,7 @@ MEEG:
 
 # Meizu
 Meizu:
-  regex: 'Meizu|MZ-[a-z]|(M04[05]|MZ-16s|M711C|M35[1356]|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M1852|M57[18]C|M3[ESX]|M031|m1 metal|M1 E|M2|M2 E|M5s Build|PRO 6|PRO 7-H)[);/ ]'
+  regex: 'Meizu|MZ-[a-z]|(M04[05]|MZ-16s|M711C|M35[1356]|M1822|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M1852|M57[18]C|M3[ESX]|M031|m1 metal|M1 E|M2|M2 E|M5s Build|PRO 6|PRO 7-H)[);/ ]'
   device: 'smartphone'
   models:
     - regex: '(?:MZ-)?M571C'
@@ -7921,6 +7921,8 @@ Meizu:
       model: 'MX Dual Core'
     - regex: 'M1852[);/ ]'
       model: 'X8'
+    - regex: 'M1822[);/ ]'
+      model: 'Note 8'
 
     - regex: '(?:MZ-)?Meizu[_ ]([^/;]+) Build'
       model: '$1'
