--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3921,11 +3921,13 @@ E-tel:
 
 # Evercoss
 Evercoss:
-  regex: 'EVERCOSS[ _]|(A75A\*)[/;) ]'
+  regex: 'EVERCOSS[ _]|(A75A\*|U50A_PLUS)[/;) ]'
   device: 'smartphone'
   models:
     - regex: 'A75A\*[/;) ]'
       model: 'A75A Star'
+    - regex: 'U50A_PLUS[/;) ]'
+      model: 'U50A Plus'
     - regex: 'EVERCOSS[ _](A7[BRLZ]|A65|A74A)[/;) ]'
       model: '$1'
 
