--- a/Tests/fixtures/smartphone-15.yml
+++ b/Tests/fixtures/smartphone-15.yml
@@ -39,3 +39,23 @@
     model: A3
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.2; HLTE300T Build/N2G47H; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/63.0.3239.83 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 7.1.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    short_name: CV
+    version: 63.0.3239.83
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: HI
+    model: HLTE300T
+  os_family: Android
+  browser_family: Chrome
