--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11443,7 +11443,7 @@ TCL:
 
 # Teclast
 Teclast:
-  regex: 'Teclast|Tbook|T30_(ROW|EEA)|T10\(E3C6\)'
+  regex: 'Teclast|X98 Air III|Tbook|T30_(ROW|EEA)|T10\(E3C6\)'
   device: 'tablet'
   models:
     - regex: 'Tbook[_ -]([^;/]+) Build'
@@ -11452,6 +11452,8 @@ Teclast:
       model: 'T10'
     - regex: 'T30_(ROW|EEA)'
       model: 'T30 $1'
+    - regex: 'X98 Air III[);/ ]'
+      model: 'X98 Air III'
     - regex: 'Teclast[_ -]([^;/]+) Build'
       model: '$1'
 
@@ -13468,7 +13470,7 @@ Zopo:
 
 # ZTE
 ZTE:
-  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|659J|907J)|N818S|N951[0579]|N9180|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:233V|331|5031O|559DL|667T|768G|792|81[25]|82[08]|83[12359]|85[125]|851M|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(233|353|558|717|799|837|862|899|917|963VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L))|Apex2|G (LTE|Lux)|Vec|Z959|Z3001S|KIS II Max|Kis 3|K3DX-V5G|Z930L|Blade (A5 2019-T|A6 MAX|A0622)|Nubia Z9|Ctyon-A9)[);/ ]'
+  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|659J|907J)|N818S|N951[0579]|N9180|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:233V|331|5031O|559DL|667T|768G|792|81[25]|82[08]|83[12359]|85[125]|851M|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|Apex2|G (LTE|Lux)|Vec|Z959|Z3001S|KIS II Max|Kis 3|K3DX-V5G|Z930L|Blade (A5 2019-T|A6 MAX|A0622)|Nubia Z9|Ctyon-A9)[);/ ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -13712,7 +13714,7 @@ ZTE:
       model: 'Blade X Max'
     - regex: 'Z717[BV]L[);/ ]'
       model: 'Citrine LTE'
-    - regex: 'Z233VL'
+    - regex: 'Z233VL[);/ ]'
       model: 'Cymbal-C LTE'
     - regex: 'Z233V'
       model: 'Cymbal LTE'
