--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -6634,3 +6634,23 @@
     model: Yureka Plus
   os_family: Android
   browser_family: Android Browser
+-
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 5.1; M681C Build/LMY47I)
+  os:
+    name: Android
+    short_name: AND
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    short_name: AN
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: phablet
+    brand: M1
+    model: M3 Note
+  os_family: Android
+  browser_family: Android Browser
