--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7946,7 +7946,7 @@ MEEG:
 
 # Meizu
 Meizu:
-  regex: 'Meizu|MZ-[a-z]|(M04[05]|MZ-16s|M7[12]1C|M35[1356]|M612C|M578CA|M1813|M1822|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M1852|M57[18]C|M3[ESX]|M031|m1 metal|M1 E|M2|M2 E|M5s Build|PRO 6|PRO 7-H)[);/ ]'
+  regex: 'Meizu|MZ-[a-z]|(M04[05]|MZ-16s|M7[12]1C|M35[1356]|M612C|M578CA|M1813|M1822|M681C|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M1852|M57[18]C|M3[ESX]|M031|m1 metal|M1 E|M2|M2 E|M5s Build|PRO 6|PRO 7-H)[);/ ]'
   device: 'smartphone'
   models:
     - regex: '(?:MZ-)?M571C'
@@ -7961,6 +7961,9 @@ Meizu:
       model: 'M2E'
     - regex: '(?:MZ-)?M578C[A]?|M2[);/ ]'
       model: 'M2'
+    - regex: 'M681C[);/ ]'
+      model: 'M3 Note'
+      device: 'phablet'
     - regex: 'M711C[);/ ]'
       model: 'M6'
     - regex: 'M721C[);/ ]'
