--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -6714,3 +6714,23 @@
     model: Valencia2 Y100 Plus
   os_family: Android
   browser_family: Android Browser
+-
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 5.1.1; HM2014819 MIUI/V8.7.7.26.SWING PRO)
+  os:
+    name: Android
+    short_name: AND
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    short_name: AN
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: XI
+    model: Redmi 2 Pro
+  os_family: Android
+  browser_family: Android Browser
