--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -6774,3 +6774,23 @@
     model: TZ142
   os_family: Android
   browser_family: Android Browser
+-
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.2.2; POLYTRON W1400 Build/POLYTRONW1400)
+  os:
+    name: Android
+    short_name: AND
+    version: 4.2.2
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    short_name: AN
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: P5
+    model: Rocket Jetz
+  os_family: Android
+  browser_family: Android Browser
