--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10950,7 +10950,7 @@ Polytron:
       model: 'Rocket T6'
     - regex: 'POLYTRON[ _-]R2506'
       model: 'Rocket T4'
-    - regex: 'POLYTRON[ _-]R3450'
+    - regex: 'POLYTRON[ _-](R3450|W1400)'
       model: 'Rocket Jetz'
     - regex: 'POLYTRON[ _-]R3500'
       model: 'Rocket Jetz 5.0'
