--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -6854,3 +6854,23 @@
     model: HLTE212T
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 10; zh-cn; M2004J7AC Build/QP1A.190711.020) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/71.0.3578.141 Mobile Safari/537.36 XiaoMi/MiuiBrowser/12.1.16
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: MIUI Browser
+    short_name: MU
+    version: 12.1.16
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: XI
+    model: Redmi 10X
+  os_family: Android
+  browser_family: Android Browser
