--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -6874,3 +6874,23 @@
     model: Redmi 10X
   os_family: Android
   browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.1; 701LV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.96 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 7.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 83.0.4103.96
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: LE
+    model: TAB4 10 Plus
+  os_family: Android
+  browser_family: Chrome
