--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7065,7 +7065,7 @@ Lenco:
 
 # lenovo
 Lenovo:
-  regex: '(?:LNV-)?Lenovo|IdeaTab|IdeaPad|Thinkpad|Yoga Tablet|Tab2A[0-9]-[0-9]{2}[a-z]?|TB2-X30L|TB3-710I|YT3-X50[ML]|ZUK[ -_]|K50a40|TB-(8504F|X304F|X704V|X704A)|A2107A-H|S6000[ ;)]|(Z2 Plus|VIBE Z2|Vibe K5( Plus)?|P2A42|L18011)[/;) ]'
+  regex: '(?:LNV-)?Lenovo|IdeaTab|IdeaPad|Thinkpad|Yoga Tablet|Tab2A[0-9]-[0-9]{2}[a-z]?|TB2-X30L|TB3-710I|YT3-X50[ML]|ZUK[ -_]|K50a40|TB-(8504F|X304F|X704V|X704A)|A2107A-H|S6000[ ;)]|(Z2 Plus|VIBE Z2|Vibe K5( Plus)?|P2A42|L18011|701LV)[/;) ]'
   device: 'smartphone'
   models:
     - regex: 'Lenovo ?G780'
@@ -7104,7 +7104,7 @@ Lenovo:
     - regex: 'Lenovo TB-X304[FL]'
       model: 'TAB4 10'
       device: 'tablet'
-    - regex: 'TB-X704V'
+    - regex: '(TB-X704V|701LV)[/;) ]'
       model: 'TAB4 10 Plus'
       device: 'tablet'
     - regex: 'TB-X704A'
