--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -6954,3 +6954,23 @@
     model: 3X (2019)
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; M2003J15SC Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/83.0.4103.106 Mobile Safari/537.36 (Mobile; afma-sdk-a-v202117037.202117037.0)
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    short_name: CV
+    version: 83.0.4103.106
+    engine: Blink
+    engine_version: ""
+  device:
+    type: phablet
+    brand: XI
+    model: Redmi Note 9
+  os_family: Android
+  browser_family: Chrome
