--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8995,7 +8995,7 @@ OnePlus:
 
 # Realme (sub brand Oppo)
 Realme:
-  regex: '(?:RMX(?:19(03|4[1235]|9[23]|2[157]|[01379]1)|2001|2030|2051|18(0[1579]|11|3[13]|2[157]|[45]1|45))|(?:OPPO[ _]?)?CPH1861)[ ;/)]'
+  regex: '(?:RMX(?:19(03|4[1235]|9[23]|2[157]|[01379]1)|2001|2027|2030|2051|18(0[1579]|11|3[13]|2[157]|[45]1|45))|(?:OPPO[ _]?)?CPH1861)[ ;/)]'
   device: 'smartphone'
   models:
     - regex: '(?:OPPO[ _]?)?CPH1861[);/ ]'
@@ -9034,6 +9034,8 @@ Realme:
       model: 'C1'
     - regex: 'RMX194[1235]'
       model: 'C2'
+    - regex: 'RMX2027'
+      model: 'C3'
     - regex: 'RMX1831'
       model: 'U1'
     - regex: 'RMX2051'
