--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -6994,3 +6994,23 @@
     model: C3
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 9; zh-CN; MZ-16T Build/MRA58K) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/62.0.3202.97 MZBrowser/8.11.5 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Meizu Browser
+    short_name: MZ
+    version: 8.11.5
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: M1
+    model: 16T
+  os_family: Android
+  browser_family: Chrome
