--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -7154,5 +7154,24 @@
     model: F2 Pro
   os_family: Android
   browser_family: Chrome
-
+-
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 7.0; Twist (2018) Build/NRD90M)
+  os:
+    name: Android
+    short_name: AND
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    short_name: AN
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: 3P
+    model: Twist (2018)
+  os_family: Android
+  browser_family: Android Browser
 
