--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -7374,5 +7374,24 @@
     model: "1"
   os_family: Android
   browser_family: Chrome
-
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; M50 STAR Build/NRD90M; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/64.0.3282.137 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    short_name: CV
+    version: 64.0.3282.137
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: E9
+    model: M50 Star
+  os_family: Android
+  browser_family: Chrome
 
