--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9001,7 +9001,7 @@ OnePlus:
 
 # Realme (sub brand Oppo)
 Realme:
-  regex: '(?:RMX(?:19(03|4[1235]|9[23]|2[157]|[01379]1)|2001|2027|2030|2051|18(0[1579]|11|3[13]|2[157]|[45]1|45))|(?:OPPO[ _]?)?CPH1861)[ ;/)]'
+  regex: '(?:RMX(?:19(03|4[1235]|9[23]|2[157]|[01379]1)|20[06]1|2027|2030|2051|18(0[1579]|11|3[13]|2[157]|[45]1|45))|(?:OPPO[ _]?)?CPH1861)[ ;/)]'
   device: 'smartphone'
   models:
     - regex: '(?:OPPO[ _]?)?CPH1861[);/ ]'
@@ -9034,6 +9034,8 @@ Realme:
       model: '5i'
     - regex: 'RMX2001'
       model: '6'
+    - regex: 'RMX2061'
+      model: '6 Pro'
     - regex: 'RMX1925'
       model: '5S'
     - regex: 'RMX1811'
@@ -11122,11 +11124,13 @@ QMobile:
 
 # Quantum
 Quantum:
-  regex: 'Quantum (Fit|Mini|V|You E)'
+  regex: 'Quantum (Fit|MUV PRO|Go|Mini|V|You [2E])[);/ ]'
   device: 'smartphone'
   models:
-    - regex: 'Quantum (Fit|Mini|V|You E)'
+    - regex: 'Quantum (Fit|Go|Mini|V|You [2E])[);/ ]'
       model: '$1'
+    - regex: 'Quantum MUV PRO[);/ ]'
+      model: 'MUV Pro'
 
 # Quechua
 Quechua:
@@ -14820,7 +14824,7 @@ Multilaser:
 
 # Positivo BGH
 Positivo BGH:
-  regex: '(Positivo Twist S|Twist (?:\(2018\)|Metal 32GB|Max))[);/ ]'
+  regex: '(Positivo Twist [SM]|Twist (?:\(2018\)|Metal 32GB|Max|XL))[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'Twist \(2018\)[);/ ]'
@@ -14829,8 +14833,12 @@ Positivo BGH:
       model: 'Twist Metal 32GB'
     - regex: 'Twist Max[);/ ]'
       model: 'Twist Max'
+    - regex: 'Twist XL[);/ ]'
+      model: 'Twist XL'
     - regex: 'Positivo Twist S[);/ ]'
       model: 'Twist S'
+    - regex: 'Positivo Twist M[);/ ]'
+      model: 'Twist M'
 
 Maxtron:
   regex: 'Maxtron[ _-](V[327]|S8)[);/ ]'
